feat: User list page, user settings page

--- a/mobApp/pv239-project/Pages/ConversationDetailPage.xaml
+++ b/mobApp/pv239-project/Pages/ConversationDetailPage.xaml
@@ -35,6 +35,7 @@
                 Command="{Binding SendMessageCommand}"
                 FontSize="16"
                 Padding="10,5"
+                Margin="8"
                 Grid.Column="1" />
       </Grid>
 
