--- a/mobApp/pv239-project/AppShell.xaml
+++ b/mobApp/pv239-project/AppShell.xaml
@@ -1,16 +1,23 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8"?>
+
 <Shell
-    x:Class="pv239_project.AppShell"
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:pv239_project"
-    xmlns:pages="clr-namespace:pv239_project.Pages"
-    Shell.FlyoutBehavior="Flyout"
-    Title="pv239_project">
+  x:Class="pv239_project.AppShell"
+  xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+  xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+  xmlns:local="clr-namespace:pv239_project"
+  xmlns:pages="clr-namespace:pv239_project.Pages"
+  Shell.FlyoutBehavior="Flyout"
+  Title="pv239_project">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate pages:ConversationListPage}"
-        Route="MainPage" />
-
+  <TabBar>
+    <Tab Title="Conversations">
+      <ShellContent ContentTemplate="{DataTemplate pages:ConversationListPage}" />
+    </Tab>
+    <Tab Title="Users">
+      <ShellContent ContentTemplate="{DataTemplate pages:UserListPage}" />
+    </Tab>
+    <Tab Title="Settings">
+      <ShellContent ContentTemplate="{DataTemplate pages:SettingsPage}" />
+    </Tab>
+  </TabBar>
 </Shell>
