--- a/mobApp/pv239-project/Pages/UserListPage.xaml
+++ b/mobApp/pv239-project/Pages/UserListPage.xaml
@@ -4,9 +4,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:models="clr-namespace:pv239_project.Models"
              xmlns:vm="clr-namespace:pv239_project.ViewModels"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Name="Root"
              x:DataType="vm:UserListViewModel"
              x:Class="pv239_project.Pages.UserListPage">
+  <ContentPage.Resources>
+    <ResourceDictionary>
+      <toolkit:IsNullConverter x:Key="IsNullConverter" />
+      <toolkit:IsNotNullConverter x:Key="IsNotNullConverter" />
+    </ResourceDictionary>
+  </ContentPage.Resources>
   <ContentPage.Content>
     <VerticalStackLayout Padding="20" Spacing="10">
       <Label Text="Users"
@@ -24,7 +31,8 @@
                         WidthRequest="40"
                         StrokeShape="RoundRectangle 20"
                         Margin="0, 0, 8, 0"
-                        BackgroundColor="#EADDFF">
+                        BackgroundColor="#EADDFF"
+                        IsVisible="{Binding Path=ProfilePicture, Converter={StaticResource IsNullConverter}}">
                   <Label FontSize="16"
                          LineHeight="24"
                          Text="{Binding Path=Initials}"
@@ -32,8 +40,13 @@
                          HorizontalTextAlignment="Center"
                          VerticalTextAlignment="Center" />
                 </Border>
-
-
+                <Border HeightRequest="40"
+                        WidthRequest="40"
+                        StrokeShape="RoundRectangle 20"
+                        Margin="0, 0, 8, 0"
+                        IsVisible="{Binding Path=ProfilePicture, Converter={StaticResource IsNotNullConverter}}">
+                  <Image Source="{Binding Path=ProfilePicture}" />
+                </Border>
                 <Label Text="{Binding Path=Fullname}"
                        FontSize="18"
                        FontAttributes="Bold"
