--- a/mobApp/pv239-project/AppShell.xaml
+++ b/mobApp/pv239-project/AppShell.xaml
@@ -4,12 +4,22 @@
   x:Class="pv239_project.AppShell"
   xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-  xmlns:local="clr-namespace:pv239_project"
   xmlns:pages="clr-namespace:pv239_project.Pages"
+  xmlns:vm="clr-namespace:pv239_project.ViewModels"
+  xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+  x:DataType="vm:AuthViewModel"
   Shell.FlyoutBehavior="Flyout"
   Title="pv239_project">
+  <Shell.Resources>
+    <ResourceDictionary>
+      <toolkit:InvertedBoolConverter x:Key="InvertedBoolConverter" />
+    </ResourceDictionary>
+  </Shell.Resources>
 
-  <TabBar>
+  <ShellContent
+    ContentTemplate="{DataTemplate pages:LoginPage}"
+    IsVisible="{Binding IsAuthenticated, Converter={StaticResource InvertedBoolConverter}}" />
+  <TabBar IsVisible="{Binding IsAuthenticated}">
     <Tab Title="Conversations">
       <ShellContent ContentTemplate="{DataTemplate pages:ConversationListPage}" />
     </Tab>
