--- a/mobApp/pv239-project/Pages/ConversationDetailPage.xaml
+++ b/mobApp/pv239-project/Pages/ConversationDetailPage.xaml
@@ -2,6 +2,7 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:strings="clr-namespace:pv239_project.Resources.i18n"
              xmlns:models="clr-namespace:pv239_project.Models"
              xmlns:vm="clr-namespace:pv239_project.ViewModels"
              x:DataType="vm:ConversationDetailViewModel"
@@ -27,19 +28,17 @@
 
       <Grid Grid.Row="2" Padding="5" ColumnDefinitions="*, Auto">
         <Entry Text="{Binding MessageInput, Mode=TwoWay}"
-               Placeholder="Type a message..."
+               Placeholder="{x:Static strings:AppTexts.ConversationDetailPage_MessagePlaceholder}"
                FontSize="16"
                HorizontalOptions="FillAndExpand" />
 
-        <Button Text="Send"
+        <Button Text="{x:Static strings:AppTexts.ConversationDetailPage_SendButtonText}"
                 Command="{Binding SendMessageCommand}"
                 FontSize="16"
                 Padding="10,5"
                 Margin="8"
                 Grid.Column="1" />
       </Grid>
-
     </Grid>
-
   </ContentPage.Content>
 </ContentPage>
