--- a/mobApp/pv239-project/Pages/ConversationListPage.xaml
+++ b/mobApp/pv239-project/Pages/ConversationListPage.xaml
@@ -2,6 +2,7 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:strings="clr-namespace:pv239_project.Resources.i18n"
              xmlns:models="clr-namespace:pv239_project.Models"
              xmlns:vm="clr-namespace:pv239_project.ViewModels"
              x:Name="Root"
@@ -9,7 +10,7 @@
              x:Class="pv239_project.Pages.ConversationListPage">
   <ContentPage.Content>
     <VerticalStackLayout Padding="20" Spacing="10">
-      <Label Text="Conversations"
+      <Label Text="{x:Static strings:AppTexts.ConversationListPage_PageLabel}"
              FontSize="24"
              HorizontalOptions="Center" />
 
