--- a/mobApp/pv239-project/Popups/ChangePasswordPopup.xaml
+++ b/mobApp/pv239-project/Popups/ChangePasswordPopup.xaml
@@ -4,6 +4,7 @@
                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
                Size="300, 240"
+               xmlns:strings="clr-namespace:pv239_project.Resources.i18n"
                xmlns:vm="clr-namespace:pv239_project.ViewModels"
                x:DataType="vm:ChangePasswordPopupViewModel"
                x:Class="pv239_project.Popups.ChangePasswordPopup">
@@ -14,8 +15,10 @@
     <Entry Text="{Binding ConfirmPassword}" Placeholder="Confirm Password" IsPassword="True" />
 
     <HorizontalStackLayout Spacing="10" HorizontalOptions="Center">
-      <Button Text="Cancel" Command="{Binding CloseCommand}" />
-      <Button Text="Submit" Command="{Binding SubmitCommand}" />
+      <Button Text="{x:Static strings:AppTexts.ChangePasswordPopup_CancelButtonText}"
+              Command="{Binding CloseCommand}" />
+      <Button Text="{x:Static strings:AppTexts.ChangePasswordPopup_SubmitButtonText}"
+              Command="{Binding SubmitCommand}" />
     </HorizontalStackLayout>
   </VerticalStackLayout>
 </toolkit:Popup>
