--- a/mobApp/pv239-project/Popups/UploadProfilePicturePopup.xaml
+++ b/mobApp/pv239-project/Popups/UploadProfilePicturePopup.xaml
@@ -4,15 +4,19 @@
                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
                Size="300, 240"
+               xmlns:strings="clr-namespace:pv239_project.Resources.i18n"
                xmlns:vm="clr-namespace:pv239_project.ViewModels"
                x:DataType="vm:UploadProfilePicturePopupViewModel"
                x:Class="pv239_project.Popups.UploadProfilePicturePopup">
   <VerticalStackLayout Padding="20" Spacing="10">
-    <Button Text="Pick a picture" Command="{Binding PickPictureCommand}" />
+    <Button Text="{x:Static strings:AppTexts.UploadProfilePicturePopup_PickPictureButtonText}"
+            Command="{Binding PickPictureCommand}" />
 
     <HorizontalStackLayout Spacing="10" HorizontalOptions="Center">
-      <Button Text="Cancel" Command="{Binding CloseCommand}" />
-      <Button Text="Submit" Command="{Binding SubmitCommand}" />
+      <Button Text="{x:Static strings:AppTexts.UploadProfilePicturePopup_CancelButtonText}"
+              Command="{Binding CloseCommand}" />
+      <Button Text="{x:Static strings:AppTexts.UploadProfilePicturePopup_SubmitButtonText}"
+              Command="{Binding SubmitCommand}" />
     </HorizontalStackLayout>
   </VerticalStackLayout>
 </toolkit:Popup>
