feat(Settings and UserList): added title to the page header

--- a/mobApp/pv239-project/Pages/UserListPage.xaml
+++ b/mobApp/pv239-project/Pages/UserListPage.xaml
@@ -8,6 +8,7 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Name="Root"
              x:DataType="vm:UserListViewModel"
+             Title="{x:Static strings:AppTexts.UserListPage_PageLabel}"
              x:Class="pv239_project.Pages.UserListPage">
   <ContentPage.Resources>
     <ResourceDictionary>
@@ -17,10 +18,6 @@
   </ContentPage.Resources>
   <ContentPage.Content>
     <VerticalStackLayout Padding="20" Spacing="10">
-      <Label Text="{x:Static strings:AppTexts.UserListPage_PageLabel}"
-             FontSize="24"
-             HorizontalOptions="Center" />
-
       <CollectionView ItemsSource="{Binding Items}">
         <CollectionView.ItemTemplate>
           <DataTemplate x:DataType="{x:Type models:User}">
