--- a/mobApp/pv239-project/Pages/SettingsPage.xaml
+++ b/mobApp/pv239-project/Pages/SettingsPage.xaml
@@ -4,9 +4,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:strings="clr-namespace:pv239_project.Resources.i18n"
-             xmlns:models="clr-namespace:pv239_project.Models"
              xmlns:vm="clr-namespace:pv239_project.ViewModels"
              x:DataType="vm:UserSettingsViewModel"
+             Title="{x:Static strings:AppTexts.SettingsPage_PageLabel}"
              x:Class="pv239_project.Pages.SettingsPage">
   <ContentPage.Resources>
     <ResourceDictionary>
@@ -16,9 +16,6 @@
   
   <ContentPage.Content>
     <Grid RowDefinitions="Auto, * , Auto, Auto">
-      <Label Text="{x:Static strings:AppTexts.SettingsPage_PageLabel}"
-             FontSize="24"
-             HorizontalOptions="Center" Grid.Row="0" />
       <VerticalStackLayout Padding="20" Spacing="10" Grid.Row="1">
       
         <Entry Text="{Binding User.Firstname, FallbackValue='', Mode=TwoWay}"
