--- a/mobApp/pv239-project/Pages/ConversationListPage.xaml
+++ b/mobApp/pv239-project/Pages/ConversationListPage.xaml
@@ -13,7 +13,7 @@
     <VerticalStackLayout Padding="10" Spacing="15">
       <CollectionView ItemsSource="{Binding Items}">
         <CollectionView.ItemTemplate>
-          <DataTemplate x:DataType="{x:Type models:ConversationList}">
+          <DataTemplate x:DataType="{x:Type models:ConversationPreview}">
             <Border StrokeThickness="0" 
                     StrokeShape="RoundRectangle 12" 
                     Margin="0, 0, 0, 10">
