--- a/mobApp/pv239-project/AppShell.xaml
+++ b/mobApp/pv239-project/AppShell.xaml
@@ -8,7 +8,7 @@
   xmlns:vm="clr-namespace:pv239_project.ViewModels"
   xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
   x:DataType="vm:AuthViewModel"
-  Shell.FlyoutBehavior="Flyout"
+  FlyoutBehavior="Disabled"
   Title="pv239_project">
   <Shell.Resources>
     <ResourceDictionary>
