fix(Inputs): confirm password label and message input maxLength

--- a/mobApp/pv239-project/Pages/ConversationDetailPage.xaml
+++ b/mobApp/pv239-project/Pages/ConversationDetailPage.xaml
@@ -101,6 +101,7 @@
                            Placeholder="Type a message..."
                            TextColor="Black"
                            Margin="10"
+                           MaxLength="255"
                            FontSize="16"
                            HeightRequest="45"
                            HorizontalOptions="FillAndExpand"/>
